Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-119765

[Reg 6.5.2 -> 6.6.1]default roles are not available in abstract table model headerdata

    XMLWordPrintable

Details

    • All
    • e0cd9c6fc (dev), 35ef5d10e (6.7), 5981fba02 (6.6), 7cd61de9a (tqtc/lts-6.5)

    Description

      When using a Headerview in qml it queries headerData(...) from the AbstractTableModel but does not check DisplayRole or ToolTipRole or other default roles, only the roles that are manually specified in roleNames(). This was working well with older versions (checked with qt 6.5.2)

      in the function
      VDMAbstractItemModelDataType::value(...) (qqmldmabstractitemmodeldata_p.h 232)
      only the rolenames are checked, not the roles that should be defined by default, as i understand from the documentation. https://doc.qt.io/qt-6/qabstractitemmodel.html#roleNames

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            oulu_hillbilly Sami Varanka
            menzels2 Stefan Menzel
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes