Warn about missing default roles

When a user implements their own model and view depends on some default
role, warn the user about. This warning gives a hint on how to fix that
error. It is the user's responsibility to implement model correctly.

Fixes: QTBUG-119765
Pick-to: 6.6 6.5
Change-Id: I96a3b653275f37ab24c450c18ec91430a6aad379
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>
(cherry picked from commit e0cd9c6fc207249236950715a16ec94752df1b2b)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>