src/quicktemplates/qquickheaderview.cpp
@@ -176,15 +176,19 @@ QAbstractItemModel *QQuickHeaderViewBasePrivate::selectionSourceModel()
 QQuickHeaderViewBase::QQuickHeaderViewBase(Qt::Orientation orient, QQuickItem *parent)
     : QQuickTableView(*(new QQuickHeaderViewBasePrivate), parent)
 {
-    d_func()->setSizePolicy(orient == Qt::Horizontal ? QLayoutPolicy::Preferred : QLayoutPolicy::Fixed,
+    Q_D(QQuickHeaderViewBase);
+    d->m_headerDataProxyModel.m_headerView = this;
+    d->setSizePolicy(orient == Qt::Horizontal ? QLayoutPolicy::Preferred : QLayoutPolicy::Fixed,
                             orient == Qt::Horizontal ? QLayoutPolicy::Fixed : QLayoutPolicy::Preferred);
-    d_func()->setOrientation(orient);
+    d->setOrientation(orient);
     setSyncDirection(orient);
 }
 
 QQuickHeaderViewBase::QQuickHeaderViewBase(QQuickHeaderViewBasePrivate &dd, QQuickItem *parent)
     : QQuickTableView(dd, parent)
 {
+    Q_D(QQuickHeaderViewBase);
+    d->m_headerDataProxyModel.m_headerView = this;
 }
 
 QQuickHeaderViewBase::~QQuickHeaderViewBase()
@@ -307,7 +311,20 @@ bool QHeaderDataProxyModel::hasChildren(const QModelIndex &parent) const
 
 QHash<int, QByteArray> QHeaderDataProxyModel::roleNames() const
 {
-    return m_model ? m_model->roleNames() : QAbstractItemModel::roleNames();
+    using namespace Qt::Literals::StringLiterals;
+
+    auto names = m_model ? m_model->roleNames() : QAbstractItemModel::roleNames();
+    if (m_headerView) {
+        QString textRole = m_headerView->textRole();
+        if (textRole.isEmpty())
+            textRole = u"display"_s;
+        if (!names.values().contains(textRole.toUtf8().constData())) {
+            qmlWarning(m_headerView).nospace() << "The 'textRole' property contains a role that doesn't exist in the model: "
+                                               << textRole << ". Check your model's roleNames() implementation";
+        }
+    }
+
+    return names;
 }
 
 QVariant QHeaderDataProxyModel::variantValue() const
