tests/auto/quickcontrols/qquickheaderview/tst_qquickheaderview.cpp
@@ -229,6 +229,8 @@ private slots:
 
     void headerData();
 
+    void warnMissingDefaultRole();
+
 private:
     QQmlEngine *engine;
     QString errorString;
@@ -443,6 +445,18 @@ void tst_QQuickHeaderView::headerData()
     const auto label = firstHeaderCell->findChild<QQuickLabel *>();
     QVERIFY(label);
     QCOMPARE(label->text(), "c0");
+}
+
+void tst_QQuickHeaderView::warnMissingDefaultRole()
+{
+    QTest::ignoreMessage(QtWarningMsg, QRegularExpression(".*toolTip.*"));
+    QTest::ignoreMessage(QtWarningMsg, QRegularExpression(".*Required property.*"));
+    QTest::ignoreMessage(QtWarningMsg, QRegularExpression("TableView.*"));
+    QQuickApplicationHelper helper(this, QStringLiteral("DefaultRoles.qml"));
+    QVERIFY2(helper.errorMessage.isEmpty(), helper.errorMessage);
+    QQuickWindow *window = helper.window;
+    window->show();
+    QVERIFY(QTest::qWaitForWindowExposed(window));
 }
 
 QTEST_MAIN(tst_QQuickHeaderView)
